--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">AndroidTestEg</string>
-
+    <string name="app_name">EspressoUITestExamples</string>
     <string name="text_next">Next</string>
     <string name="text_start">Start</string>
     <string name="text_next_fragment">Next fragment</string>
@@ -16,4 +15,5 @@
     <string name="text_list_movie_star_actors">Star Actors</string>
     <string name="text_directors">Directors:</string>
     <string name="text_star_actors">Star Actors:</string>
+    <string name="text_select_image_from_gallery">Select an image from gallery</string>
 </resources>
